Fixed missing NET40 compilation symbol for Release mode and tidied.

--- a/src/CSharpTest.Net.Collections/CSharpTest.Net.Collections.csproj
+++ b/src/CSharpTest.Net.Collections/CSharpTest.Net.Collections.csproj
@@ -45,6 +45,10 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'MonoRelease|AnyCPU'">
     <OutputPath>bin\MonoRelease\</OutputPath>
+    <DefineConstants>TRACE;NET40</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
